--- a/tsai/01_formularze/10_create/index.html
+++ b/tsai/01_formularze/10_create/index.html
@@ -11,9 +11,9 @@
     <main>
         <section class="left">
             <form>
-
-                <input type="text" id="task">
                 <label for="task">Wpisz zadanie</label>
+                <input type="text" id="task">
+                <p id="error"></p>
                 <button id="btn1">Wyslij</button>
             </form>
         </section>
@@ -21,6 +21,7 @@
             <ul>
 
             </ul>
+            <section id="rightB"></section>
         </section>
     </main>
 </body>
